ArangoDB init and clear scripts